--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -45,7 +45,7 @@
               <% @comments.each do |comment| %>
               <li class="comments_list">
               <%= comment.text %>
-              <%= link_to  "(#{@prototype.user.name})", "/users/#{current_user}", class: :comment_user %>
+              <%= link_to  "(#{comment.user.name})", "/users/#{comment.user.id}", class: :comment_user %>
               <% end %>
             <% end %>
             </li>
