--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -43,13 +43,12 @@ a {
 
 }
 .inner {
-  width: 1024px;
-  margin: 0 auto;
+  width: 100%;
 }
 .nav {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .logo {
   width: 200px;
@@ -83,12 +82,23 @@ a {
 }
 
 /* フォーム周り */
+.koumoku{
+  font-size: 20px;
+  text-align: center;
+}
+
 .form__wrapper{
   min-height: calc(100vh - 161px);
+  text-align: center;
 }
 
 .form__text {
   width: 50%;
+  height: 50px;
+}
+
+.form__text_1{
+  width: 20%;
 }
 
 .field{
@@ -133,16 +143,22 @@ a {
 .card__wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-between;;
   min-height: calc(100vh - 161px);
+  margin: 0 auto;
 }
 .card {
-  width: calc((100% - 50px) / 3);
-  margin-bottom: 40px;
+  width: calc((100%) / 5);
+  margin: 20px;
+}
+.card__wrapper::after {
+  display: block;
+content:"";
+width: calc((100%) / 5);
 }
 .card__img {
   margin-bottom: 16px;
+  
 }
 .card__title {
   display: block;
@@ -191,7 +207,9 @@ a {
 .detail__title{
   font-size: 20px;
   font-weight: bold;
+  padding-top: 10px;
 }
+
 .prototype__manage{
   display: flex;
   justify-content: center;
@@ -218,14 +236,16 @@ a {
   background-color: #f6f6f6;
   padding: 20px;
   margin: 28px 0 40px 0;
+  text-align: center;
 }
 
 .comments_lists{
   padding-left: 20px;
+  list-style: none;
 }
 
 .comments_list{
-  list-style-type: square;
+  /* list-style-type: square; */
   padding-bottom: 5px;
 }
 
