--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,9 +1,9 @@
 <div class="card">
-  <%= link_to image_tag(prototype.image,class: :card__img),"/prototypes/#{prototype.id}" %>
+  <%# <%= link_to image_tag(prototype.image,class: :card__img),"/prototypes/#{prototype.id}" %> 
   <div class="card__body">
-    <%=  link_to "#{prototype.title}", prototype_path(prototype.id), class: :card__title%>
+    <%=  link_to "#{prototype.date}", prototype_path(prototype.id), class: :card__title%>
     <p class="card__summary">
-      <%= "#{prototype.catch_copy}" %>
+      <%= "#{prototype.thema}" %>
     </p>
     <%= link_to "by #{prototype.user.name}", "/users/#{prototype.user.id}}", class: :card__user %>
   </div>
