--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -2,7 +2,7 @@
   <div class="inner">
     <div class="prototype__wrapper">
       <p class="prototype__hedding">
-        <%= @prototype.title %>
+        <%= @prototype.date %>
       </p>
       <%= link_to "by #{@prototype.user.name}","/users/#{@prototype.user.id}", class: :prototype__user %> 
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
@@ -11,20 +11,50 @@
           <%= link_to "削除する", prototype_path(@prototype), method: :delete, class: :prototype__btn %>
         </div>
       <% end %>
-      <div class="prototype__image" style="text-align:center;"> 
+      <%# <div class="prototype__image" style="text-align:center;"> 
         <%= image_tag(@prototype.image)%> 
-      </div>
+      <%# </div> %>
       <div class="prototype__body">
         <div class="prototype__detail">
-          <p class="detail__title">キャッチコピー</p>
+          <p class="detail__title">今月のテーマ</p>
           <p class="detail__message">
-            <%= @prototype.catch_copy %>
+            <%= @prototype.thema %>
+          </p>
+        </div>
+        <div class="koumoku">
+          <%= "【本日の行動計画】" %><br />
+        </div> 
+        <div class="prototype__detail">
+          <p class="detail__title">本日の重点課題と徹底する取り組み</p>
+          <p class="detail__message">
+            <%= @prototype.text1 %>
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">コンセプト</p>
+          <p class="detail__title">チーム全体の理念浸透➡成長・成果に繋げる取り組み</p>
           <p class="detail__message">
-            <%= @prototype.concept %>
+            <%= @prototype.text2 %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">メンバー一人一人の成長に向けた取り組み</p>
+          <p class="detail__message">
+            <%= @prototype.text3 %>
+          </p>
+        </div>
+        <div class="koumoku">
+          <%= "【成果報告】" %><br />
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">本日チームが成長した点　チームの状況</p>
+          <p class="detail__message">
+            <%= @prototype.text4 %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">リーダーとしての取り組み振り返り（成果・成長に貢献できたか？）</p>
+          <p class="detail__message">
+            <%= @prototype.text5 %>
           </p>
         </div>
       </div>
