--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= "#{@user.name}さんのプロトタイプ"%>
+        <%= "#{@user.name}さんの投稿"%>
       </h2>
       <div class="user__card">
           <%= render partial: "prototypes/prototype", collection: @prototype %>
