--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -76,6 +76,7 @@
               <li class="comments_list">
               <%= comment.text %>
               <%= link_to  "(#{comment.user.name})", "/users/#{comment.user.id}", class: :comment_user %>
+              <%= link_to  "削除", prototype_comment_path(@prototype,comment), method: :delete %>
               <% end %>
             <% end %>
             </li>
