--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -16,7 +16,7 @@
       <%# </div> %>
         <div class="prototype__body">
         <div class="prototype__detail">
-          <p class="detail__title">今月のテーマ</p>
+          <p class="detail__title">今月の目標と目的</p>
           <p class="detail__message">
             <%= @prototype.thema %>
           </p>
@@ -37,7 +37,7 @@
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">メンバー一人一人の成長に向けた取り組み</p>
+          <p class="detail__title">本日の行動指針に沿った取り組み</p>
           <p class="detail__message">
             <%= @prototype.text3 %>
           </p>
@@ -46,13 +46,13 @@
           <%= "【成果報告】" %><br />
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">本日チームが成長した点　チームの状況</p>
+          <p class="detail__title">本日成長した点（チームの状況）</p>
           <p class="detail__message">
             <%= @prototype.text4 %>
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">リーダーとしての取り組み振り返り（成果・成長に貢献できたか？）</p>
+          <p class="detail__title">本日の取り組み振り返り</p>
           <p class="detail__message">
             <%= @prototype.text5 %>
           </p>
