--- a/app/views/prototypes/new.html.erb
+++ b/app/views/prototypes/new.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="inner">
     <div class="form__wrapper">
-      <h2 class="page-heading">成長管理シート</h2>
+      <h2 class="page-heading">日報</h2>
       <%= render partial: 'form', locals: { prototype: @prototype } %>
         <%# 部分テンプレートでフォームを表示する %>
     </div>
