--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -31,15 +31,21 @@
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">チーム全体の理念浸透➡成長・成果に繋げる取り組み</p>
+          <p class="detail__title">本日の徹底する取り組みの目的</p>
           <p class="detail__message">
             <%= @prototype.text2 %>
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">本日の行動指針に沿った取り組み</p>
+          <p class="detail__title">チーム全体の理念浸透➡成長・成果に繋げる取り組み</p>
           <p class="detail__message">
             <%= @prototype.text3 %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">本日の行動指針に沿った取り組み</p>
+          <p class="detail__message">
+            <%= @prototype.text4 %>
           </p>
         </div>
         <div class="koumoku">
@@ -48,7 +54,7 @@
         <div class="prototype__detail">
           <p class="detail__title">本日成長した点（チームの状況）</p>
           <p class="detail__message">
-            <%= @prototype.text4 %>
+            <%= @prototype.text5 %>
           </p>
         </div>
         <div class="prototype__detail">
