--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -3,7 +3,7 @@
   <div class="card__body">
     <%=  link_to "#{prototype.date}", prototype_path(prototype.id,user_id:prototype.user_id), class: :card__title%>
     <p class="card__summary">
-      <%= "#{prototype.thema}" %>
+      <%= "#{prototype.text1}" %>
     </p>
     <%= link_to "by #{prototype.user.name}", "/users/#{prototype.user.id}}", class: :card__user %>
   </div>
